# script

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  bootstrap_test.tscl  run_ot_tests.sh  run_tscl_tests.sh  test_selfhost_features.ot
.github/workflows/: ci.yml  release.yml
benches/: tls_bench.rs
bootstrap/: codegen.ot  codegen.tscl  emitter.ot  emitter.tscl  ir.ot  ir.tscl  ir_builder.ot  ir_builder.tscl  lexer.ot  lexer.tscl  main.ot  main.tscl  parser.ot  parser.tscl  pipeline.ot  pipeline.tscl  stdlib.ot  test_bootstrap.tscl  test_emitter.tscl  types.ot  utils.ot
compiler/: main.ot  main.tscl  main.tscl.ll  pipeline.ot  pipeline.tscl  test_emitter_call.tscl  test_method_call.tscl  test_pipeline_methods.tscl
compiler/ast/: mod.ot  types.ot
compiler/codegen/: emitter.ot  emitter.tscl  mod.ot  mod.tscl
compiler/ir/: builder.ot  builder.tscl  mod.tscl
compiler/lexer/: error.ot  mod.ot  mod.tscl  token.tscl
compiler/parser/: error.ot  expr.ot  expr.tscl  mod.tscl  stmt.ot  stmt.tscl
compiler/passes/: borrow_ck.tscl  lifetime_constraints.ot  lifetime_constraints.tscl  mod.ot  mod.tscl  opt.ot  opt.tscl  typecheck.tscl  types.ot  types.tscl
compiler/stdlib/: builtins.ot
docs/: Dockerfile  SELF_HOSTING.md  docusaurus.config.ts  package-lock.json  sidebars.ts  sidebarsUnroll.ts
docs/blog/: 2026-01-24-es-modules.md  2026-01-25-async-await-tokio.md  2026-01-26-standard-library-lessons.md  2026-01-27-self-hosting-journey.md  2026-01-28-introducing-oite.md  2026-01-28-introducing-script.md  authors.yml  tags.yml
docs/docs/: abi.md  architecture.md  contributing.md  development-status.md  ecmascript-conformance.md  getting-started.md  intro.md  javascript-interop.md  language-features.md  lifetimes.md  memory-model.md  self-hosting.md  ssa-ir.md  standard-library.md  type-system.md
docs/docs-compiler/: abi.md  intro.md  self-hosting.md  ssa-ir.md
docs/docs-unroll/: file-type-interop.md  modules.md
docs/static/: robots.txt
examples/: bench_arithmetic.ot  bench_fib.tscl  bench_loop.tscl  file_reader.ot  file_reader.tscl  http_server_fast.rs  http_server_httparse.rs  http_server_may.rs  http_server_multicore.rs  http_server_optimized.rs  http_server_reuseport.rs  https_server.rs  simple_fib.ot  test_array_methods.ot  test_fib.ot  test_methods.ot  test_methods.tscl  test_operators.ot  test_operators.tscl
scripts/: bootstrap_verify.sh  gen_test_certs.sh  install.sh  run_https_bench.sh
src/: lib.rs  main.rs  tests.rs
src/backend/: aot.rs  cranelift.rs  jit.rs  layout.rs  mod.rs  tier.rs
src/compiler/: borrow_ck.rs  mod.rs
src/ir/: lower.rs  mod.rs  opt.rs  stubs.rs  typecheck.rs  verify.rs
src/loader/: decoder.rs  mod.rs
src/module/: diagnostics.rs  loader.rs  mod.rs  resolver.rs
src/runtime/: abi.rs  abi_tests.rs  heap.rs  mod.rs  stubs.rs
src/stdlib/: mod.rs  path.rs  promise.rs
src/types/: checker.rs  convert.rs  error.rs  inference.rs  lifetime_constraints.rs  mod.rs  registry.rs
src/vm/: mod.rs  opcodes.rs  stdlib_setup.rs  value.rs
std/: prelude.ot  prelude.tscl  types.tscl
test/: simple5.tscl
tests/: bootstrap_test.tscl  determinism.tscl  test_codegen.tscl  test_compile_types.ot  test_ir.tscl  test_modular_compiler.tscl  test_pipeline.ot  test_pipeline.tscl  test_string_cmp.ot
tests/compiler/: bootstrap_verify.ot  compiler_test.ot  compiler_test2.ot  compiler_verify.ot  lifetime_basic.ot  lifetime_elision.ot  lifetime_errors.ot  lifetime_structs.ot  test_compiler.ot  test_compiler_structure.ot  test_ir.ot  test_ir_builder.ot  test_ir_simple.ot  test_lifetime_constraints.ot  test_lifetime_constraints.tscl  test_passes_via_bootstrap.ot  test_pipeline.ot  test_pipeline.tscl  test_structural_types.tscl  test_types.ot  test_types.tscl  test_types_minimal.tscl  test_types_simple.tscl
tests/integration/: basic_test.ot  benchmark.ot  bootstrap_test.ot  charat_test.ot  compile_all.ot  comprehensive_test.ot  determinism.ot  helper_test.ot  modular_test.ot  self_compile_all.ot  self_compile_test.ot  simple_compile.ot
(+42 files in other folders)
