[package]
name = "oite"
version = "0.6.0"
edition = "2024"
build = "build.rs"

[profile.release]
# Disable LTO in release profile to avoid embed-bitcode conflicts
# when building runtime as staticlib
lto = false
panic = "abort"  # Use abort on panic to avoid unwinding dependencies

[features]
default = ["vm_interop"]
vm_interop = []
work-stealing = []  # Optional work-stealing scheduler (requires crossbeam-deque, parking)
tls = []  # Optional TLS support for https_server example

[dependencies]
swc_common = "18.0.1"
swc_ecma_ast = "19.0.0"
swc_ecma_parser = "32.0.0"

# System calls
libc = "0.2"

# Async runtime (minimal - for basic task scheduling)
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

# Native backend (Cranelift JIT/AOT)
cranelift = "0.113"
cranelift-module = "0.113"
cranelift-jit = "0.113"
cranelift-native = "0.113"
cranelift-codegen = "0.113"
target-lexicon = "0.12"

# Module loading
sha2 = "0.10"
hex = "0.4"

# LLVM AOT backend
# NOTE: Requires LLVM 18 to be installed on the system.
# Install via: brew install llvm@18
# Then set: export LLVM_SYS_180_PREFIX=$(brew --prefix llvm@18)
# Or use llvmenv: cargo install llvmenv && llvmenv build-entry --version 18
llvm-sys = "180"

# JSON parsing (used by loader/compiler)
serde_json = "1.0"

# Random number generation (kept for potential use in runtime)
fastrand = "2.0"
